styles - footer background

--- a/res/css/style.css
+++ b/res/css/style.css
@@ -136,7 +136,7 @@ main {
 
 footer {
     color: black;
-    background-image: linear-gradient(to right, #cccfcf, #c6c8ca);
+    background-image: linear-gradient(to right, #d4dbdb, #d9dbdd);
     /* background-color: #00A3DD; */
 }
 
