--- a/res/css/style.css
+++ b/res/css/style.css
@@ -158,7 +158,7 @@ footer h5 {
     background-color: #1EB53A;
     background-color: rgb(3, 8, 77);
     font-weight: 400;
-    color: grey;
+    color: rgb(245, 170, 8);
     padding-top: .5rem;
     padding-bottom: .5rem;
 }
