--- a/res/css/style.css
+++ b/res/css/style.css
@@ -136,8 +136,9 @@ main {
 
 footer {
     color: black;
-    background-image: linear-gradient(to right, #d4dbdb, #d9dbdd);
+    background-image: linear-gradient(to right, #f6f8f8, #ebecee);
     /* background-color: #00A3DD; */
+    background-color: rgb(245, 170, 8);
 }
 
 footer a {
